fixed horizontal scrolling

--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@
   font-weight: 800;
 }
 
-body {
+* {
   box-sizing: border-box;
   font-family: Avenir, sans-serif;
 }
